--- a/Yodle-iOS-Training/Yodle-iOS-Training/Base.lproj/Main.storyboard
+++ b/Yodle-iOS-Training/Yodle-iOS-Training/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yuC-bp-BQs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -9,7 +10,7 @@
         <scene sceneID="6g4-hy-n7N">
             <objects>
                 <tableViewController id="IgT-EL-D5v" customClass="YTMainTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="nSG-Ak-ebr">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="22" sectionFooterHeight="22" id="nSG-Ak-ebr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -19,35 +20,34 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7ID-QB-xuo" id="Ej7-cz-ifr">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPJ-vG-NsC" userLabel="Title">
-                                            <rect key="frame" x="96" y="10" width="463" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPJ-vG-NsC" userLabel="Title">
+                                            <rect key="frame" x="100" y="18" width="459" height="42"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="3wQ-VC-zjE"/>
+                                                <constraint firstAttribute="height" constant="42" id="3wQ-VC-zjE"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ofh-Y0-z5u">
-                                            <rect key="frame" x="8" y="10" width="80" height="80"/>
+                                            <rect key="frame" x="8" y="18" width="84" height="84"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="80" id="C0d-Gt-AE8"/>
-                                                <constraint firstAttribute="width" constant="80" id="wc8-ae-igB"/>
+                                                <constraint firstAttribute="width" secondItem="ofh-Y0-z5u" secondAttribute="height" multiplier="1:1" id="vgu-ap-Dyf"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIP-5M-IN2" userLabel="Description">
-                                            <rect key="frame" x="96" y="39" width="463" height="51"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="100" y="68" width="459" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="ofh-Y0-z5u" secondAttribute="bottom" constant="2" id="5TF-Us-SXH"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="ofh-Y0-z5u" secondAttribute="bottom" constant="10" id="5TF-Us-SXH"/>
                                         <constraint firstItem="aPJ-vG-NsC" firstAttribute="top" secondItem="ofh-Y0-z5u" secondAttribute="top" id="R2H-5k-6E9"/>
                                         <constraint firstItem="wIP-5M-IN2" firstAttribute="top" secondItem="aPJ-vG-NsC" secondAttribute="bottom" constant="8" id="SSI-sc-CzO"/>
                                         <constraint firstItem="wIP-5M-IN2" firstAttribute="bottom" secondItem="ofh-Y0-z5u" secondAttribute="bottom" id="Y8h-9A-piA"/>
-                                        <constraint firstItem="ofh-Y0-z5u" firstAttribute="top" secondItem="Ej7-cz-ifr" secondAttribute="topMargin" constant="2" id="cpZ-aj-Csq"/>
+                                        <constraint firstItem="ofh-Y0-z5u" firstAttribute="top" secondItem="Ej7-cz-ifr" secondAttribute="topMargin" constant="10" id="cpZ-aj-Csq"/>
                                         <constraint firstItem="aPJ-vG-NsC" firstAttribute="leading" secondItem="ofh-Y0-z5u" secondAttribute="trailing" constant="8" id="d8o-lc-lXy"/>
                                         <constraint firstItem="aPJ-vG-NsC" firstAttribute="leading" secondItem="wIP-5M-IN2" secondAttribute="leading" id="oju-29-6PP"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="aPJ-vG-NsC" secondAttribute="trailing" id="sIb-xK-RWr"/>
@@ -98,12 +98,12 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="iuu-Iw-dnf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jNh-v1-a54">
-                                <rect key="frame" x="16" y="419" width="568" height="180.5"/>
+                                <rect key="frame" x="16" y="419" width="568" height="181"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
