--- a/Yodle-iOS-Training/Yodle-iOS-Training/Base.lproj/Main.storyboard
+++ b/Yodle-iOS-Training/Yodle-iOS-Training/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yuC-bp-BQs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yuC-bp-BQs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -94,7 +94,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWm-J2-t31">
-                                <rect key="frame" x="16" y="375" width="568" height="42"/>
+                                <rect key="frame" x="16" y="375" width="490" height="42"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="iuu-Iw-dnf"/>
                                 </constraints>
@@ -108,17 +108,37 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vx7-MQ-bVm">
+                                <rect key="frame" x="16" y="393" width="490" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m83-sp-WjV">
+                                <rect key="frame" x="514" y="375" width="70" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="8RS-yx-v6E"/>
+                                    <constraint firstAttribute="height" constant="42" id="Kqy-UM-bIE"/>
+                                </constraints>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="iWm-J2-t31" firstAttribute="trailing" secondItem="Vx7-MQ-bVm" secondAttribute="trailing" id="7aa-aJ-M14"/>
                             <constraint firstItem="UIC-5t-2Zd" firstAttribute="top" secondItem="jNh-v1-a54" secondAttribute="bottom" id="B7i-tR-SzH"/>
+                            <constraint firstItem="iWm-J2-t31" firstAttribute="baseline" secondItem="Vx7-MQ-bVm" secondAttribute="baseline" id="Hgv-uI-5rC"/>
+                            <constraint firstItem="iWm-J2-t31" firstAttribute="top" secondItem="m83-sp-WjV" secondAttribute="top" id="Kwx-fk-dNi"/>
                             <constraint firstAttribute="centerX" secondItem="6li-TM-uaG" secondAttribute="centerX" id="QgL-sG-pJS"/>
                             <constraint firstItem="iWm-J2-t31" firstAttribute="top" secondItem="6li-TM-uaG" secondAttribute="bottom" constant="10" id="Vfa-ja-5rB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="m83-sp-WjV" secondAttribute="trailing" id="bJq-sU-kb4"/>
                             <constraint firstItem="jNh-v1-a54" firstAttribute="top" secondItem="iWm-J2-t31" secondAttribute="bottom" constant="2" id="cY7-Mq-RpC"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="iWm-J2-t31" secondAttribute="trailing" id="fNm-My-YWg"/>
                             <constraint firstItem="6li-TM-uaG" firstAttribute="top" secondItem="yCj-lb-IAg" secondAttribute="topMargin" constant="65" id="khr-f6-4Kc"/>
+                            <constraint firstItem="iWm-J2-t31" firstAttribute="leading" secondItem="Vx7-MQ-bVm" secondAttribute="leading" id="pAe-rH-cHL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="jNh-v1-a54" secondAttribute="trailing" id="pdC-wc-N6H"/>
                             <constraint firstItem="jNh-v1-a54" firstAttribute="leading" secondItem="yCj-lb-IAg" secondAttribute="leadingMargin" id="q3t-D8-p1p"/>
+                            <constraint firstItem="m83-sp-WjV" firstAttribute="leading" secondItem="iWm-J2-t31" secondAttribute="trailing" constant="8" id="uvq-lV-BTM"/>
                             <constraint firstItem="iWm-J2-t31" firstAttribute="leading" secondItem="yCj-lb-IAg" secondAttribute="leadingMargin" id="vo4-K1-4o9"/>
                         </constraints>
                     </view>
